--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=MTQ2NzYwNjA5OTA4MjM0NjQ5Nw.G05q30.JeuO2G0RJzUrjbIIrbFdoOEYTrNaD6Jq-eL5fY
+TOKEN=MTQ2NzYwNjA5OTA4MjM0NjQ5Nw.GJMWM_.wzQXXjLpw81wCQt7G5o24Ul9kx8zd87t_53w5A
